-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.268 2008-04-28 17:45:43 remko Exp $
-----------------------------------------------------------------------------------------
2008-04-28	remko
	* GMT_eckert.sh:	Removed. Was not used by anything.
	* GMT_gall_stereo.sh:	Added example for -JCyl_stere.
	* GMT_Chapter_6*.tex:	Added more information on optional -J parameters. Added some
				historical background.
	* examples, scripts:	Removed options in -J when same as default.

2008-04-26	pwessel
	* README etc:		Updated to reflect recent changes such as only *.bz2 archives
				and references to Windows installers.
	* grdview.c:		The -Qc option failed to set the "build image" flag and produced
				garbage surface tiles.  Also, -T[s] produced polygons that were
				not checked for wrapping at a periodic map boundary.
				
2008-04-25	pwessel
	* x2sys:		Moved *.def to share/x2sys
	* mgd77/mgd77sniffer.c:	Cumulative fixes & updates since August 2007:
				Added -K option to flip navigation flags (if extreme positions
				cause checking to flag good records rather than bad).
				Added -D[x]r option, where x is any preexisting -D option.
				Appending r tells sniffer to use all records in sniffer output
				rather than omitting records flagged with bad navigation.
				Moved speed checking algorithm to precede any other analysis of
				mgd77 data records, including regression checking. This allows
				extreme nav errors to be flagged and ignored in later analysis.
				Modified speed checking algorithm to compare the current nav fix
				to the previous good nav fix, rather than just the previous nav fix.
				This does a better job of flagging the correct fix when excessive
				speeds are found. Previously the current flag was compared to the
				previous flag and whenever excessive speed was computed the current
				record was flagged. This lead to flagging good records at times when